[gd_scene load_steps=11 format=3 uid="uid://b34lyfwxsb32n"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_eyge8"]
[ext_resource type="Texture2D" uid="uid://bpd28kc7sfmma" path="res://heart_animated_1.png" id="2_cj00h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c6yie"]
atlas = ExtResource("2_cj00h")
region = Rect2(68, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_05kbl"]
atlas = ExtResource("2_cj00h")
region = Rect2(51, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_r77up"]
atlas = ExtResource("2_cj00h")
region = Rect2(34, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hqri"]
atlas = ExtResource("2_cj00h")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv1rx"]
atlas = ExtResource("2_cj00h")
region = Rect2(0, 0, 17, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_j7ty6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6yie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05kbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r77up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hqri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv1rx")
}],
"loop": false,
"name": &"health",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_mdqoq"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heart1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Heart1:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["health"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nacam"]
_data = {
"health": SubResource("Animation_mdqoq")
}

[node name="CanvasLayer" type="CanvasLayer" groups=["UI"]]
script = ExtResource("1_eyge8")

[node name="Heart1" type="AnimatedSprite2D" parent="."]
position = Vector2(18.5, 14.5)
sprite_frames = SubResource("SpriteFrames_j7ty6")
animation = &"health"

[node name="Heart2" type="AnimatedSprite2D" parent="."]
position = Vector2(38.5, 14.5)
sprite_frames = SubResource("SpriteFrames_j7ty6")
animation = &"health"

[node name="Heart3" type="AnimatedSprite2D" parent="."]
position = Vector2(38.5, 14.5)
sprite_frames = SubResource("SpriteFrames_j7ty6")
animation = &"health"
offset = Vector2(20, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nacam")
}

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="QuitTimer" to="." method="_on_quit_timer_timeout"]
